--- a/notemate-frontend/package.json
+++ b/notemate-frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.9.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.12.1",
+    "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
