--- a/notemate-frontend/package.json
+++ b/notemate-frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@hookform/resolvers": "^3.1.1",
     "@react-pdf/renderer": "^3.1.12",
     "framer-motion": "^10.12.16",
